Bug 250559 - bludevil-helper crash while sending picture from smartphone to laptop
Summary: bludevil-helper crash while sending picture from smartphone to laptop
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-08 14:39 UTC by Thomas Janssen
Modified: 2010-10-03 16:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.34 KB, text/plain)
2010-09-09 12:51 UTC, Thomas Janssen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Janssen 2010-09-08 14:39:38 UTC
Application: bluedevil-helper (0.1)
KDE Platform Version: 4.5.1 (KDE 4.5.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.34.6-47.fc13.x86_64 x86_64
Distribution: "Fedora release 13 (Goddard)"

-- Information about the crash:
- What I was doing when the application crashed:
I tried to send a picture from my smartphone Samsung Jet S8000 to my laptop. That was the first reaction i got since days, trying to send from phone to laptop. 
The other way around works well so far.

-- Backtrace:
Application: BlueDevil File Receiver Helper (bluedevil-helper), signal: Segmentation fault
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[KCrash Handler]
#6  KNotification::close (this=0x1cd9b70) at /usr/src/debug/kdelibs-4.5.1/kdeui/notifications/knotification.cpp:248
#7  0x0000000000409c89 in OpenObex::ServerSession::~ServerSession (this=0x1ccd070, __in_chrg=<value optimized out>)
    at /usr/src/debug/bluedevil/src/daemon/helpers/filereceiver/openobex/serversession.cpp:77
#8  0x0000000000409d19 in OpenObex::ServerSession::~ServerSession (this=0x1ccd070, __in_chrg=<value optimized out>)
    at /usr/src/debug/bluedevil/src/daemon/helpers/filereceiver/openobex/serversession.cpp:79
#9  0x00007f8d5ae9fbd0 in QObject::event (this=0x1ccd070, e=<value optimized out>) at kernel/qobject.cpp:1194
#10 0x00007f8d5b5e168c in QApplicationPrivate::notify_helper (this=0x1b24610, receiver=0x1ccd070, e=0x1d0bb90) at kernel/qapplication.cpp:4396
#11 0x00007f8d5b5e6cdd in QApplication::notify (this=<value optimized out>, receiver=0x1ccd070, e=0x1d0bb90) at kernel/qapplication.cpp:4277
#12 0x00000031f101be66 in KApplication::notify (this=0x7ffff00f0890, receiver=0x1ccd070, event=0x1d0bb90) at /usr/src/debug/kdelibs-4.5.1/kdeui/kernel/kapplication.cpp:310
#13 0x00007f8d5ae8e93c in QCoreApplication::notifyInternal (this=0x7ffff00f0890, receiver=0x1ccd070, event=0x1d0bb90) at kernel/qcoreapplication.cpp:732
#14 0x00007f8d5ae91f52 in sendEvent (receiver=0x0, event_type=0, data=0x1b0e600) at kernel/qcoreapplication.h:215
#15 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x1b0e600) at kernel/qcoreapplication.cpp:1373
#16 0x00007f8d5aeb6e43 in sendPostedEvents (s=<value optimized out>) at kernel/qcoreapplication.h:220
#17 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#18 0x0000003e1743bd02 in g_main_dispatch (context=0x1b271f0) at gmain.c:1960
#19 IA__g_main_context_dispatch (context=0x1b271f0) at gmain.c:2513
#20 0x0000003e1743fae8 in g_main_context_iterate (context=0x1b271f0, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2591
#21 0x0000003e1743fc9c in IA__g_main_context_iteration (context=0x1b271f0, may_block=1) at gmain.c:2654
#22 0x00007f8d5aeb6983 in QEventDispatcherGlib::processEvents (this=0x1b0dcf0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#23 0x00007f8d5b68225e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#24 0x00007f8d5ae8d782 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#25 0x00007f8d5ae8da5c in QEventLoop::exec (this=0x7ffff00f07e0, flags=...) at kernel/qeventloop.cpp:201
#26 0x00007f8d5ae921d9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#27 0x0000000000406571 in main (argc=1, argv=0x7ffff00f0b08) at /usr/src/debug/bluedevil/src/daemon/helpers/filereceiver/main.cpp:46

Reported using DrKonqi
Comment 1 Thomas Janssen 2010-09-09 12:51:46 UTC
Created attachment 51465 [details]
New crash information added by DrKonqi

bluedevil-helper (0.1) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:

This time i tried to send a calendar event to my laptop. I will stop attaching more traces, except something different happens.

-- Backtrace (Reduced):
#6  KNotification::close (this=0x9f6910) at /usr/src/debug/kdelibs-4.5.1/kdeui/notifications/knotification.cpp:248
#7  0x0000000000409c89 in OpenObex::ServerSession::~ServerSession (this=0xa53750, __in_chrg=<value optimized out>)
    at /usr/src/debug/bluedevil/src/daemon/helpers/filereceiver/openobex/serversession.cpp:77
#8  0x0000000000409d19 in OpenObex::ServerSession::~ServerSession (this=0xa53750, __in_chrg=<value optimized out>)
    at /usr/src/debug/bluedevil/src/daemon/helpers/filereceiver/openobex/serversession.cpp:79
#9  0x0000003c5b568bd0 in QObject::event (this=0xa53750, e=<value optimized out>) at kernel/qobject.cpp:1194
#10 0x0000003c5c7b368c in QApplicationPrivate::notify_helper (this=0x868610, receiver=0xa53750, e=0xa3f870) at kernel/qapplication.cpp:4396
Comment 2 Alex Fiestas 2010-09-12 23:32:15 UTC
Hi, I've fixed the crash in master, thanks for reporting!