When the notification is closed, the object is deleted. So we have to handle the close signal, to be sure that we do not operate with a deleted object (crash).

BUG: 250559
BUG: 250902